[gd_scene load_steps=24 format=2]

[ext_resource path="res://Project Reaper/Project Reaper/Ninja class.png" type="Texture" id=1]
[ext_resource path="res://Entities/Player.gd" type="Script" id=2]
[ext_resource path="res://Entities/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cooldownbutton.png" type="Texture" id=4]
[ext_resource path="res://Entities/ability.gd" type="Script" id=5]
[ext_resource path="res://Project Reaper/Project Reaper/HEADS-export.png" type="Texture" id=6]
[ext_resource path="res://Project Reaper/Project Reaper/Dummy class.png" type="Texture" id=7]
[ext_resource path="res://Project Reaper/Project Reaper/Maestro class.png" type="Texture" id=8]
[ext_resource path="res://Project Reaper/Project Reaper/Painter class.png" type="Texture" id=9]
[ext_resource path="res://Project Reaper/Project Reaper/Scrapslinger  class.png" type="Texture" id=10]
[ext_resource path="res://Project Reaper/Project Reaper/Sniper class.png" type="Texture" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.66865
height = 7.07277

[sub_resource type="Animation" id=2]
resource_name = "Batk"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Heads:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.06, 0.08, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 4, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -4 ), Vector2( -8.04663e-07, -4 ), Vector2( -4.47035e-07, -4 ), Vector2( 1, -4 ), Vector2( 1, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body_Sel_Classes/Dummy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 21, 22, 23 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Heads:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body_Sel_Classes/Dummy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Heads:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Heads:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body_Sel_Classes/Dummy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Heads:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, -1 ), Vector2( 4, -2 ), Vector2( 5, -1 ), Vector2( 4, 0 ), Vector2( 3, -5.96046e-08 ), Vector2( 3, -1 ), Vector2( 4, -2 ), Vector2( 4, -1 ), Vector2( 5, -1.19209e-07 ), Vector2( 3, 0 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body_Sel_Classes/Dummy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Heads:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body_Sel_Classes/Dummy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Heads:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body_Sel_Classes/Dummy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=9]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Dummy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 16, 17, 16, 17, 18, 19, 20, 56 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Heads:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, -4 ), Vector2( 2, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body_Sel_Classes/Dummy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 5 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body_Sel_Classes/Heads:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body_Sel_Classes/Dummy:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="CapsuleShape2D" id=12]
radius = 6.64562
height = 7.68155

[node name="Player" type="KinematicBody2D"]
position = Vector2( -19, -1 )
script = ExtResource( 2 )

[node name="Body_Sel_Classes" type="Node2D" parent="."]

[node name="Dummy" type="Sprite" parent="Body_Sel_Classes"]
visible = false
position = Vector2( -0.999998, 0 )
texture = ExtResource( 7 )
hframes = 8
vframes = 8

[node name="Maestro" type="Sprite" parent="Body_Sel_Classes"]
visible = false
position = Vector2( -0.999998, 0 )
texture = ExtResource( 8 )
hframes = 8
vframes = 8

[node name="Ninja" type="Sprite" parent="Body_Sel_Classes"]
visible = false
position = Vector2( -0.999998, 0 )
texture = ExtResource( 1 )
hframes = 8
vframes = 8

[node name="Painter" type="Sprite" parent="Body_Sel_Classes"]
visible = false
position = Vector2( -0.999998, 0 )
texture = ExtResource( 9 )
hframes = 8
vframes = 8

[node name="Scrapslinger" type="Sprite" parent="Body_Sel_Classes"]
visible = false
position = Vector2( -0.999998, 0 )
texture = ExtResource( 10 )
hframes = 8
vframes = 8

[node name="Sniper" type="Sprite" parent="Body_Sel_Classes"]
visible = false
position = Vector2( -0.999998, 0 )
texture = ExtResource( 11 )
hframes = 8
vframes = 8

[node name="Heads" type="Sprite" parent="Body_Sel_Classes"]
position = Vector2( 0, -4 )
texture = ExtResource( 6 )
hframes = 32
vframes = 32
frame = 259

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.82724, 5.98232 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 8
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="TextureButton" type="TextureButton" parent="Camera2D"]
margin_left = -219.0
margin_top = -124.0
margin_right = -203.0
margin_bottom = -108.0
rect_scale = Vector2( 3, 3 )
mouse_filter = 1
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sweep" type="TextureProgress" parent="Camera2D/TextureButton"]
modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
anchor_right = 0.882
anchor_bottom = 1.0
margin_right = -19.28
margin_bottom = -24.0
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Camera2D/TextureButton"]
margin_left = 10.0
margin_top = 12.0
margin_right = 29.0
margin_bottom = 26.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.0901961, 0.301961, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.823529, 0.823529, 1 )
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Camera2D/TextureButton"]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Batk = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Rise = SubResource( 5 )
anims/Run = SubResource( 6 )
anims/crouch = SubResource( 7 )
anims/dash = SubResource( 8 )
anims/death = SubResource( 9 )
anims/dodge = SubResource( 10 )
anims/fall = SubResource( 11 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -1.2996, 6.33809 )
shape = SubResource( 12 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 8.32184, 5.21368 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -11.831, 5.21368 )

[connection signal="Cooldown_stopped" from="Camera2D/TextureButton" to="." method="_on_TextureButton_Cooldown_stopped"]
[connection signal="Stopped" from="Camera2D/TextureButton" to="." method="_on_TextureButton_Stopped"]
[connection signal="pressed" from="Camera2D/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Camera2D/TextureButton" to="Camera2D/TextureButton" method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Camera2D/TextureButton/Timer" to="Camera2D/TextureButton" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Hurtbox"]
